# eevideo

./: Cargo.toml  LICENSE  README.md  prompt.txt
.cargo/: config.toml  windows-runner.ps1
.github/workflows/: ci.yml
crates/eedeviced/: Cargo.toml
crates/eedeviced/src/: lib.rs
crates/eefakedev/: Cargo.toml
crates/eefakedev/src/: lib.rs  main.rs
crates/eevid/src/: lib.rs
crates/eevideo-control/: Cargo.toml
crates/eevideo-control/src/: backend.rs  controller.rs  lib.rs  register.rs  register_map.rs
crates/eevideo-control/yaml/: EEVideo_Features.yaml
crates/eevideo-device/: Cargo.toml
crates/eevideo-device/src/: lib.rs
crates/eevideo-proto/src/: stats.rs
crates/eeview/: Cargo.toml
crates/eeview/src/: lib.rs
crates/gst-plugin-eevideo/: Cargo.toml
crates/gst-plugin-eevideo/src/: lib.rs
crates/gst-plugin-eevideo/src/eevideosrc/: imp.rs
crates/gst-plugin-eevideo/tests/: managed_control.rs
cross/jetson-orin/: README.md  build.sh  prepare-sysroot.sh  test-build-config.sh  test-ci-arm64-sources.sh  test-prepare-sysroot.sh
docs/: README.md  developer-guide.md  eedeviced-provider-guide.md  implementation-profile.md  interop-smoke.md  jetson-nano-jetpack4-first-time-setup.md  jetson-orin-device-bringup.md  jetson-orin-first-time-setup.md  linux-device-first-time-setup.md  spec-enhancement-proposal.md
docs/superpowers/plans/: 2026-03-14-jetson-v4l2-docs.md
docs/superpowers/specs/: 2026-03-14-jetson-v4l2-docs-design.md  2026-03-18-jetson-demo-video-design.md
