[package]
name = "eefakedev"
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
version.workspace = true
description = "Fake EEVideo device daemon with a pure-Rust test-pattern source"

[dependencies]
anyhow.workspace = true
clap.workspace = true
ctrlc.workspace = true
eevideo-control = { path = "../eevideo-control" }
eevideo-proto = { path = "../eevideo-proto" }
if-addrs = "0.13"
