[package]
name = "eefakedev"
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
version.workspace = true
description = "Fake EEVideo device daemon with a pure-Rust test-pattern source"

[dependencies]
anyhow.workspace = true
clap.workspace = true
ctrlc.workspace = true
eevideo-device = { path = "../eevideo-device" }
eevideo-proto = { path = "../eevideo-proto" }

[dev-dependencies]
eevideo-control = { path = "../eevideo-control" }
